--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@ html,body { margin:0; height:100%; overflow:hidden; background:#000; font-family
 #nav-left { left: 20px; }
 #nav-right { right: 20px; }
 
-/* Only show arrows when mouse is inside viewer */
 body.desktop.hover-left #nav-left,
 body.desktop.hover-right #nav-right {
   opacity: 1;
@@ -54,10 +53,26 @@ body.desktop.hover-right #nav-right {
   line-height: 1.4;
 }
 
-/* --- Canvas Container --- */
-#viewer {
-  width:100%;
-  height:100%;
+/* --- Viewer --- */
+#viewer { width:100%; height:100%; }
+
+/* --- Bottom Frosted Bar --- */
+#footerBar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 13px;
+  color: #d0d0d0;
+  backdrop-filter: blur(10px);
+  background: rgba(255,255,255,0.1);
+  border-top: 1px solid rgba(255,255,255,0.18);
+  z-index: 40;
+  pointer-events: none; /* makes sure it doesn't block clicks */
 }
 </style>
 </head>
@@ -74,21 +89,23 @@ body.desktop.hover-right #nav-right {
     <p><b>Controls</b></p>
     <p>• Drag to rotate the sphere</p>
     <p>• Pinch or mouse wheel to zoom</p>
-    <p>• Click left/right screen edges (or tap on mobile) to switch images</p>
+    <p>• Click or tap left/right edges to switch images</p>
     <p style="margin-top:20px; opacity:0.8;">Click this message to dismiss it</p>
   </div>
 </div>
 
-<!-- 3D Viewer -->
+<!-- Viewer -->
 <div id="viewer"></div>
 
-<!-- THREE JS -->
+<!-- Footer Bar -->
+<div id="footerBar">
+  Images and Webpage (C) 2025 _______. Do not distribute or modify my content.
+</div>
+
+<!-- Three.js -->
 <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
 
 <script>
-/* ------------------------------
-   GLOBALS
---------------------------------*/
 let scene, camera, renderer, sphereMesh;
 let imageList = [];
 let currentIndex = 0;
@@ -97,9 +114,6 @@ let lastX = 0, lastY = 0;
 
 const viewer = document.getElementById("viewer");
 
-/* ------------------------------
-   INIT
---------------------------------*/
 init();
 loadImagesFromIMG();
 animate();
@@ -121,15 +135,15 @@ function init() {
   window.addEventListener("resize", onResize);
   renderer.domElement.addEventListener("pointerdown", onPointerDown);
   window.addEventListener("pointermove", onPointerMove);
-  window.addEventListener("pointerup", onPointerUp);
+  window.addEventListener("pointerup", ()=>isPointerDown=false);
   renderer.domElement.addEventListener("wheel", onWheel, { passive:false });
 
   document.getElementById("helpOverlay").addEventListener("click", e=>{
     e.target.style.display="none";
   });
 
-  /* Desktop hover detection */
   document.body.classList.add("desktop");
+
   document.addEventListener("mousemove", e => {
     const w = window.innerWidth;
     if (e.clientX < w * 0.2) {
@@ -144,48 +158,32 @@ function init() {
     }
   });
 
-  /* Nav buttons click */
   document.getElementById("nav-left").addEventListener("click", prevImage);
   document.getElementById("nav-right").addEventListener("click", nextImage);
 
-  /* Mobile tap zones */
   window.addEventListener("click", e => {
-    const w = window.innerWidth;
-    const x = e.clientX;
-
     if (document.getElementById("helpOverlay").style.display !== "none") return;
+
+    const x = e.clientX;
+    const w = window.innerWidth;
 
     if (x < w * 0.10) prevImage();
     else if (x > w * 0.90) nextImage();
   });
 }
 
-/* ------------------------------
-   LOAD IMAGES FROM ./IMG
---------------------------------*/
 async function loadImagesFromIMG() {
   try {
     const resp = await fetch("./IMG/");
     const text = await resp.text();
     const matches = [...text.matchAll(/href="([^"]+\.(jpg|jpeg|png|webp))"/gi)];
-
     imageList = matches.map(m => "IMG/" + m[1]);
-
-    if (imageList.length === 0) {
-      console.warn("No images found in IMG/");
-      return;
-    }
-
-    loadTexture(imageList[0]);
-
+    if (imageList.length > 0) loadTexture(imageList[0]);
   } catch (err) {
     console.error("Failed to read IMG folder:", err);
   }
 }
 
-/* ------------------------------
-   LOAD PANORAMA
---------------------------------*/
 function loadTexture(url) {
   const loader = new THREE.TextureLoader();
   loader.load(url, tex => {
@@ -195,24 +193,18 @@ function loadTexture(url) {
   });
 }
 
-/* ------------------------------
-   IMAGE NAVIGATION
---------------------------------*/
 function nextImage() {
-  if (imageList.length === 0) return;
+  if (!imageList.length) return;
   currentIndex = (currentIndex + 1) % imageList.length;
   loadTexture(imageList[currentIndex]);
 }
 
 function prevImage() {
-  if (imageList.length === 0) return;
+  if (!imageList.length) return;
   currentIndex = (currentIndex - 1 + imageList.length) % imageList.length;
   loadTexture(imageList[currentIndex]);
 }
 
-/* ------------------------------
-   POINTER / ZOOM CONTROLS
---------------------------------*/
 function onPointerDown(e) {
   isPointerDown = true;
   lastX = e.clientX;
@@ -221,21 +213,15 @@ function onPointerDown(e) {
 
 function onPointerMove(e) {
   if (!isPointerDown) return;
-
   const dx = e.clientX - lastX;
   const dy = e.clientY - lastY;
-
   lastX = e.clientX;
   lastY = e.clientY;
-
   sphereMesh.rotation.y += dx * 0.005;
   sphereMesh.rotation.x += dy * 0.005;
-
   const limit = Math.PI/2 - 0.01;
   sphereMesh.rotation.x = Math.max(-limit, Math.min(limit, sphereMesh.rotation.x));
 }
-
-function onPointerUp() { isPointerDown = false; }
 
 function onWheel(e) {
   e.preventDefault();
@@ -244,18 +230,17 @@ function onWheel(e) {
   camera.updateProjectionMatrix();
 }
 
-/* ------------------------------ */
 function onResize() {
   camera.aspect = window.innerWidth/window.innerHeight;
   camera.updateProjectionMatrix();
   renderer.setSize(window.innerWidth, window.innerHeight);
 }
 
-/* ------------------------------ */
 function animate() {
   requestAnimationFrame(animate);
   renderer.render(scene, camera);
 }
 </script>
+
 </body>
 </html>
