--- a/index.html
+++ b/index.html
@@ -3,84 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>360 Viewer</title>
+
+    <!-- Roboto Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+
     <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            background: #000;
-            font-family: Arial, sans-serif;
-        }
+        body { margin:0; overflow:hidden; background:#000; font-family: 'Roboto', sans-serif; }
 
         /* Frosted thin bottom bar */
-        #footerBar {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 22px;
-            backdrop-filter: blur(8px);
-            background: rgba(40,40,40,0.35);
-            color: #bfbfbf;
-            font-size: 12px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            pointer-events: none;
-        }
+        #footerBar { position: fixed; bottom: 0; left:0; width:100%; height:18px; backdrop-filter: blur(8px); background: rgba(40,40,40,0.45); color:#999; font-size:12px; display:flex; align-items:center; justify-content:center; pointer-events:none; }
 
         /* Overlay instructions */
-        #instructionOverlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0,0,0,0.55);
-            color: white;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            font-size: 20px;
-            padding: 20px;
-            cursor: pointer;
-            z-index: 10;
-        }
+        #instructionOverlay { position: fixed; top:0; left:0; width:100vw; height:100vh; background: rgba(0,0,0,0.65); color:#ccc; display:flex; justify-content:center; align-items:center; text-align:center; font-size:16px; padding:20px; cursor:pointer; z-index:10; }
 
         /* Arrows PC hover */
-        .sideHotspot {
-            position: fixed;
-            top: 0;
-            width: 15%;
-            height: 100%;
-            z-index: 5;
-        }
-        #leftHotspot { left: 0; }
-        #rightHotspot { right: 0; }
+        .sideHotspot { position: fixed; top:0; width:15%; height:100%; z-index:5; }
+        #leftHotspot { left:0; }
+        #rightHotspot { right:0; }
 
-        .arrowBtn {
-            position: fixed;
-            top: 50%;
-            transform: translateY(-50%);
-            width: 60px;
-            height: 60px;
-            backdrop-filter: blur(10px);
-            background: rgba(255,255,255,0.22);
-            border-radius: 12px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            opacity: 0;
-            transition: opacity 0.2s;
-            z-index: 6;
-        }
-        #leftArrow { left: 30px; }
-        #rightArrow { right: 30px; }
+        .arrowBtn { position: fixed; top:50%; transform:translateY(-50%); width:60px; height:60px; backdrop-filter: blur(10px); background: rgba(255,255,255,0.22); border-radius:12px; display:flex; align-items:center; justify-content:center; opacity:0; transition:opacity 0.2s; z-index:6; }
+        #leftArrow { left:30px; }
+        #rightArrow { right:30px; }
 
-        .arrowBtn img {
-            width: 32px;
-            filter: invert(1);
-        }
+        .arrowBtn img { width:32px; filter: invert(1); }
     </style>
 </head>
 <body>
@@ -103,87 +48,68 @@
 
 <canvas id="viewer"></canvas>
 
-<div id="footerBar">Images and Webpage (C) 2025 Alexander Puh, Alex Puh, Lex Machina, Lex Domitor. Do not distribute or modify my content.</div>
+<div id="footerBar">Images and Webpage (C) 2025 _______. Do not distribute or modify my content.</div>
 
 <script>
-// --- Flexible image loading using directory scraping (works ONLY if server allows directory listing) ---
-const canvas = document.getElementById('viewer');
-const gl = canvas.getContext('webgl');
 let images = [];
 let currentIndex = 0;
-let texture;
+let scale = 1;
+const displayImg = document.createElement('img');
+displayImg.style.position='absolute';
+displayImg.style.top='50%';
+displayImg.style.left='50%';
+displayImg.style.transform='translate(-50%,-50%) scale(1)';
+displayImg.style.pointerEvents='none';
+displayImg.style.maxWidth='none';
+displayImg.style.maxHeight='none';
+document.body.appendChild(displayImg);
 
+// Load image list from JSON
 async function loadImages() {
     try {
-        // Fetch directory index
-        const res = await fetch('IMG/');
-        const text = await res.text();
-
-        // Parse filenames from directory listing
-        const matches = [...text.matchAll(/href=["']([^"']+\.png)["']/gi)];
-        const files = matches.map(m => m[1]);
-
-        if (files.length === 0) {
-            alert("No PNG images found in IMG folder.");
-            return;
-        }
-
-        // Load each image
-        for (const f of files) {
-            const img = new Image();
-            img.src = `IMG/${f}`;
-            await new Promise(res => { img.onload = res; img.onerror = res; });
-            if (img.width > 0) images.push(img);
-        }
-
-        initGL();
-    } catch (e) {
-        alert("Your server does NOT allow directory listing. Provide a JSON file or enable indexes.");
+        const res = await fetch('IMG/images.json');
+        images = await res.json();
+        if (!images || images.length===0) throw new Error('Empty list');
+        loadImage(0);
+    } catch(e){
+        alert('Error loading images.');
+        console.error(e);
     }
 }
 
-function resizeCanvas() {
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-}
-window.addEventListener('resize', resizeCanvas);
-resizeCanvas();
-
-function initGL() {
-    texture = gl.createTexture();
-    gl.bindTexture(gl.TEXTURE_2D, texture);
-    gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, images[currentIndex]);
-    gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
-    gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_S, gl.CLAMP_TO_EDGE);
-    gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_T, gl.CLAMP_TO_EDGE);
-
-    requestAnimationFrame(draw);
+function loadImage(i){
+    currentIndex = (i + images.length) % images.length;
+    displayImg.src = 'IMG/'+images[currentIndex];
 }
 
-function draw() {
-    gl.viewport(0, 0, canvas.width, canvas.height);
-    gl.clearColor(0,0,0,1);
-    gl.clear(gl.COLOR_BUFFER_BIT);
-    requestAnimationFrame(draw);
-}
+const nextImage=()=>loadImage(currentIndex+1);
+const prevImage=()=>loadImage(currentIndex-1);
 
-function nextImage(dir) {
-    if (images.length === 0) return;
-    currentIndex = (currentIndex + dir + images.length) % images.length;
-    gl.bindTexture(gl.TEXTURE_2D, texture);
-    gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, images[currentIndex]);
-}
-
-document.getElementById('leftHotspot').addEventListener('click', () => nextImage(-1));
-document.getElementById('rightHotspot').addEventListener('click', () => nextImage(1));
+document.getElementById('leftHotspot').onclick=prevImage;
+document.getElementById('rightHotspot').onclick=nextImage;
 
 document.getElementById('leftHotspot').addEventListener('mouseenter',()=>leftArrow.style.opacity=1);
 document.getElementById('leftHotspot').addEventListener('mouseleave',()=>leftArrow.style.opacity=0);
 document.getElementById('rightHotspot').addEventListener('mouseenter',()=>rightArrow.style.opacity=1);
 document.getElementById('rightHotspot').addEventListener('mouseleave',()=>rightArrow.style.opacity=0);
 
-const overlay = document.getElementById('instructionOverlay');
-overlay.onclick = () => overlay.style.display = 'none';
+const overlay=document.getElementById('instructionOverlay');
+overlay.onclick=()=>overlay.style.display='none';
+
+// Drag rotation
+let lastX=null;
+document.addEventListener('mousedown',e=>lastX=e.clientX);
+document.addEventListener('mousemove',e=>{if(lastX!==null){if(e.clientX<lastX-10)nextImage();else if(e.clientX>lastX+10)prevImage();lastX=e.clientX}});
+document.addEventListener('mouseup',()=>lastX=null);
+document.addEventListener('touchstart',e=>lastX=e.touches[0].clientX);
+document.addEventListener('touchmove',e=>{const x=e.touches[0].clientX;if(lastX!==null){if(x<lastX-10)nextImage();else if(x>lastX+10)prevImage();lastX=x}});
+document.addEventListener('touchend',()=>lastX=null);
+
+// Zoom
+document.addEventListener('wheel',e=>{scale+=(e.deltaY<0?0.1:-0.1);scale=Math.max(0.2,Math.min(4,scale));displayImg.style.transform=`translate(-50%,-50%) scale(${scale})`;});
+let pinchStart=null;
+document.addEventListener('touchmove',e=>{if(e.touches.length===2){const dx=e.touches[0].clientX-e.touches[1].clientX;const dy=e.touches[0].clientY-e.touches[1].clientY;const dist=Math.hypot(dx,dy);if(pinchStart===null)pinchStart=dist;else{scale*=dist/pinchStart;scale=Math.max(0.2,Math.min(4,scale));displayImg.style.transform=`translate(-50%,-50%) scale(${scale})`;pinchStart=dist}}});
+document.addEventListener('touchend',()=>pinchStart=null);
 
 loadImages();
 </script>
