--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <canvas id="viewer"></canvas>
 
-<div id="footerBar">Images and Webpage (C) 2025 _______. Do not distribute or modify my content.</div>
+<div id="footerBar">Images and Webpage ©2025 Alexander Puh / Lex Machina / Lex Domitor / Mechwolf. Do not distribute or modify my content.</div>
 
 <script>
 let images = [];
