--- a/index.html
+++ b/index.html
@@ -35,59 +35,55 @@ body { margin:0; overflow:hidden; background:#000; font-family: 'Roboto', sans-s
 <img id="displayImg" style="position:absolute;top:50%;left:50%;transform:translate(-50%,-50%) scale(1);pointer-events:none;max-width:none;max-height:none;" />
 <div id="footerBar">Loading...</div>
 <script>
-let images=[]; let currentIndex=0; let scale=1;
-const displayImg=document.getElementById('displayImg');
-const footerBar=document.getElementById('footerBar');
+let images = [
+    "CAM_20251113111233_0032_D.JPG",
+    "CAM_20251114123835_0045_D.JPG",
+    "CAM_20251115133539_0062_D.JPG"
+];
+let currentIndex = 0;
+let scale = 1;
+const displayImg = document.getElementById('displayImg');
+const footerBar = document.getElementById('footerBar');
 
 // Load LICENSE text
-fetch('LICENSE').then(r=>r.text()).then(txt=>footerBar.textContent=txt).catch(e=>console.warn('Could not load LICENSE', e));
+fetch('LICENSE').then(r => r.text()).then(txt => footerBar.textContent = txt).catch(e => console.warn('Could not load LICENSE', e));
 
-// Load images from JSON
-async function loadImages(){
-    try{
-        const res=await fetch('IMG/images.json');
-        let data=await res.json();
-        images=data.filter(f=>f.match(/\.jpe?g$|\.png$/i));
-        if(!images.length) throw new Error('Empty list');
-        loadImage(0);
-    }catch(e){
-        alert('Error loading images.');
-        console.error(e);
-    }
-}
 function loadImage(i){
-    currentIndex=(i+images.length)%images.length;
-    displayImg.src='IMG/'+images[currentIndex];
-    displayImg.onload=()=>console.log('Loaded',images[currentIndex]);
-    displayImg.onerror=()=>console.error('Failed to load',images[currentIndex]);
+    currentIndex = (i + images.length) % images.length;
+    displayImg.src = 'IMG/' + images[currentIndex];
+    displayImg.onload = () => console.log('Loaded', images[currentIndex]);
+    displayImg.onerror = () => console.error('Failed to load', images[currentIndex]);
 }
 
-const nextImage=()=>loadImage(currentIndex+1);
-const prevImage=()=>loadImage(currentIndex-1);
+const nextImage = () => loadImage(currentIndex + 1);
+const prevImage = () => loadImage(currentIndex - 1);
 
-document.getElementById('leftHotspot').onclick=prevImage;
-document.getElementById('rightHotspot').onclick=nextImage;
-document.getElementById('leftHotspot').addEventListener('mouseenter',()=>leftArrow.style.opacity=1);
-document.getElementById('leftHotspot').addEventListener('mouseleave',()=>leftArrow.style.opacity=0);
-document.getElementById('rightHotspot').addEventListener('mouseenter',()=>rightArrow.style.opacity=1);
-document.getElementById('rightHotspot').addEventListener('mouseleave',()=>rightArrow.style.opacity=0);
+document.getElementById('leftHotspot').onclick = prevImage;
+document.getElementById('rightHotspot').onclick = nextImage;
+document.getElementById('leftHotspot').addEventListener('mouseenter', () => leftArrow.style.opacity = 1);
+document.getElementById('leftHotspot').addEventListener('mouseleave', () => leftArrow.style.opacity = 0);
+document.getElementById('rightHotspot').addEventListener('mouseenter', () => rightArrow.style.opacity = 1);
+document.getElementById('rightHotspot').addEventListener('mouseleave', () => rightArrow.style.opacity = 0);
 
-const overlay=document.getElementById('instructionOverlay'); overlay.onclick=()=>overlay.style.display='none';
+const overlay = document.getElementById('instructionOverlay'); overlay.onclick = () => overlay.style.display = 'none';
 
 // Drag rotation
-let lastX=null; document.addEventListener('mousedown',e=>lastX=e.clientX);
-document.addEventListener('mousemove',e=>{if(lastX!==null){if(e.clientX<lastX-10)nextImage();else if(e.clientX>lastX+10)prevImage();lastX=e.clientX}});
-document.addEventListener('mouseup',()=>lastX=null);
-document.addEventListener('touchstart',e=>lastX=e.touches[0].clientX);
-document.addEventListener('touchmove',e=>{const x=e.touches[0].clientX;if(lastX!==null){if(x<lastX-10)nextImage();else if(x>lastX+10)prevImage();lastX=x}});
-document.addEventListener('touchend',()=>lastX=null);
+let lastX = null;
+document.addEventListener('mousedown', e => lastX = e.clientX);
+document.addEventListener('mousemove', e => { if (lastX !== null) { if (e.clientX < lastX - 10) nextImage(); else if (e.clientX > lastX + 10) prevImage(); lastX = e.clientX } });
+document.addEventListener('mouseup', () => lastX = null);
+document.addEventListener('touchstart', e => lastX = e.touches[0].clientX);
+document.addEventListener('touchmove', e => { const x = e.touches[0].clientX; if (lastX !== null) { if (x < lastX - 10) nextImage(); else if (x > lastX + 10) prevImage(); lastX = x } });
+document.addEventListener('touchend', () => lastX = null);
 
 // Zoom
-document.addEventListener('wheel',e=>{scale+=(e.deltaY<0?0.1:-0.1);scale=Math.max(0.2,Math.min(4,scale));displayImg.style.transform=`translate(-50%,-50%) scale(${scale})`;});
-let pinchStart=null; document.addEventListener('touchmove',e=>{if(e.touches.length===2){const dx=e.touches[0].clientX-e.touches[1].clientX; const dy=e.touches[0].clientY-e.touches[1].clientY; const dist=Math.hypot(dx,dy); if(pinchStart===null) pinchStart=dist; else{scale*=dist/pinchStart; scale=Math.max(0.2,Math.min(4,scale)); displayImg.style.transform=`translate(-50%,-50%) scale(${scale})`; pinchStart=dist}}});
-document.addEventListener('touchend',()=>pinchStart=null);
+document.addEventListener('wheel', e => { scale += (e.deltaY < 0 ? 0.1 : -0.1); scale = Math.max(0.2, Math.min(4, scale)); displayImg.style.transform = `translate(-50%,-50%) scale(${scale})`; });
+let pinchStart = null;
+document.addEventListener('touchmove', e => { if (e.touches.length === 2) { const dx = e.touches[0].clientX - e.touches[1].clientX; const dy = e.touches[0].clientY - e.touches[1].clientY; const dist = Math.hypot(dx, dy); if (pinchStart === null) pinchStart = dist; else { scale *= dist / pinchStart; scale = Math.max(0.2, Math.min(4, scale)); displayImg.style.transform = `translate(-50%,-50%) scale(${scale})`; pinchStart = dist } } });
+document.addEventListener('touchend', () => pinchStart = null);
 
-loadImages();
+// Load first image
+loadImage(0);
 </script>
 </body>
 </html>
