--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <title>360 Viewer</title>
 <link href="https://fonts.googleapis.com/css2?family=Saira:wght@300;400;500&display=swap" rel="stylesheet">
 <style>
-body { margin:0; overflow:hidden; font-family: 'Saira', sans-serif; background:#000; }
-#footerBar { position: fixed; bottom:0; left:0; width:100%; height:18px; backdrop-filter: blur(8px); background: rgba(40,40,40,0.45); color:#ccc; font-size:12px; display:flex; align-items:center; justify-content:center; pointer-events:none; white-space: pre-wrap; }
-#instructionOverlay { position: fixed; top:0; left:0; width:100vw; height:100vh; background: rgba(0,0,0,0.65); color:#ccc; display:flex; justify-content:center; align-items:center; text-align:center; font-size:16px; padding:20px; cursor:pointer; z-index:10; display:none; }
+body { margin:0; overflow:hidden; font-family: 'Saira', sans-serif; background:#000; user-select: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; }
+#footerBar { position: fixed; bottom:0; left:0; width:100%; height:18px; backdrop-filter: blur(8px); background: rgba(40,40,40,0.45); color:#ccc; font-size:12px; display:flex; align-items:center; justify-content:center; pointer-events:none; white-space: pre-wrap; user-select: none; }
+#instructionOverlay { position: fixed; top:0; left:0; width:100vw; height:100vh; background: rgba(0,0,0,0.65); color:#ccc; display:flex; justify-content:center; align-items:center; text-align:center; font-size:16px; padding:20px; cursor:pointer; z-index:10; display:none; user-select: none; }
 .sideHotspot { position: fixed; top:0; width:15%; height:100%; z-index:5; display:none; }
 #leftHotspot { left:0; }
 #rightHotspot { right:0; }
@@ -15,7 +15,7 @@ body { margin:0; overflow:hidden; font-family: 'Saira', sans-serif; background:#
 #leftArrow { left:30px; }
 #rightArrow { right:30px; }
 .arrowBtn img { width:32px; filter: invert(1); }
-#loadingOverlay { position:fixed; top:0; left:0; width:100vw; height:100vh; background: rgba(0,0,0,0.85); color:#ccc; display:flex; justify-content:center; align-items:center; font-size:18px; z-index:20; flex-direction: column; }
+#loadingOverlay { position:fixed; top:0; left:0; width:100vw; height:100vh; background: rgba(0,0,0,0.85); color:#ccc; display:flex; justify-content:center; align-items:center; font-size:18px; z-index:20; flex-direction: column; user-select: none; }
 </style>
 </head>
 <body>
@@ -132,6 +132,9 @@ overlay.onclick = ()=>overlay.style.display='none';
 
 // === LICENSE footer ===
 fetch('LICENSE').then(r=>r.text()).then(txt=>footerBar.textContent=txt).catch(e=>console.warn('Could not load LICENSE', e));
+
+// === Disable right-click ===
+document.addEventListener('contextmenu', function(e) { e.preventDefault(); });
 </script>
 </body>
 </html>
