--- a/index.html
+++ b/index.html
@@ -6,23 +6,33 @@
 <link href="https://fonts.googleapis.com/css2?family=Saira:wght@300;400;500&display=swap" rel="stylesheet">
 <style>
 body { margin:0; overflow:hidden; font-family: 'Saira', sans-serif; background:#000; user-select: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; }
-#footerBar { position: fixed; bottom:0; left:0; width:100%; height:18px; backdrop-filter: blur(8px); background: rgba(40,40,40,0.45); color:#ccc; font-size:12px; display:flex; align-items:center; justify-content:center; pointer-events:none; white-space: pre-wrap; user-select: none; }
-#instructionOverlay { position: fixed; top:0; left:0; width:100vw; height:100vh; background: rgba(0,0,0,0.65); color:#ccc; display:flex; justify-content:center; align-items:center; text-align:center; font-size:16px; padding:20px; cursor:pointer; z-index:10; display:none; user-select: none; }
-#loadingOverlay { position:fixed; top:0; left:0; width:100vw; height:100vh; background: rgba(0,0,0,0.85); color:#ccc; display:flex; justify-content:center; align-items:center; font-size:18px; z-index:20; flex-direction: column; user-select: none; }
+#loadingOverlay {
+    position:fixed; top:0; left:0; width:100vw; height:100vh;
+    display:flex; justify-content:center; align-items:center; flex-direction:column;
+    font-size:20px; color:#ccc; z-index:20; user-select:none;
+    animation: pulse 1.5s infinite alternate;
+}
+@keyframes pulse { 0%{opacity:0.4;} 100%{opacity:1;} }
+#instructionOverlay {
+    position: fixed; top:0; left:0; width:100vw; height:100vh; background: rgba(0,0,0,0.65);
+    color:#ccc; display:flex; justify-content:center; align-items:center; text-align:center;
+    font-size:16px; padding:20px; cursor:pointer; z-index:10; display:none; user-select: none;
+}
+#footerBar {
+    position: fixed; bottom:0; left:0; width:100%; height:18px;
+    backdrop-filter: blur(8px); background: rgba(40,40,40,0.45); color:#ccc;
+    font-size:12px; display:flex; align-items:center; justify-content:center; pointer-events:none; user-select:none;
+}
 </style>
 </head>
 <body>
 
+<div id="loadingOverlay">Loading image... (0%)</div>
 <div id="instructionOverlay">
     <div>
-        <p>Controls:<br>
-        - Drag with mouse or finger to rotate.<br>
-        - Scroll or pinch to zoom.<br><br>
-        <b>Click this message to dismiss it.</b></p>
+        <p>Controls:<br>- Drag with mouse/finger to rotate.<br>- Scroll/pinch to zoom.<br><br><b>Click to dismiss.</b></p>
     </div>
 </div>
-
-<div id="loadingOverlay">Loading image...</div>
 <div id="footerBar">Loading...</div>
 
 <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
@@ -32,7 +42,7 @@ const loadingOverlay = document.getElementById('loadingOverlay');
 const overlay = document.getElementById('instructionOverlay');
 const footerBar = document.getElementById('footerBar');
 
-// === Scene setup ===
+// Scene setup
 const scene = new THREE.Scene();
 const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
 const renderer = new THREE.WebGLRenderer({antialias:true});
@@ -47,44 +57,50 @@ camera.position.set(0,0,0.1);
 controls.target.set(0,0,0);
 controls.update();
 
-let sphereGeo = new THREE.SphereGeometry(500, 60, 40);
-sphereGeo.scale(-1,1,1);
-let sphereMat, sphereMesh;
+let sphereMesh;
 
-// === Load single image ===
-const imagePath = 'CAM_20251114123835_0045_D.JPG';
+// Load the new image
+const imagePath = 'halfmoonbay4k360.jpg';
 const loader = new THREE.TextureLoader();
-loader.load(imagePath, tex=>{
-    tex.minFilter = THREE.LinearFilter;
-    sphereMat = new THREE.MeshBasicMaterial({map: tex});
-    sphereMesh = new THREE.Mesh(sphereGeo, sphereMat);
-    scene.add(sphereMesh);
 
-    loadingOverlay.style.display='none';
-    overlay.style.display='flex';
+loader.load(
+    imagePath,
+    function(texture){ // onLoad
+        const sphereGeo = new THREE.SphereGeometry(500, 60, 40);
+        sphereGeo.scale(-1,1,1);
+        sphereMesh = new THREE.Mesh(sphereGeo, new THREE.MeshBasicMaterial({map:texture}));
+        scene.add(sphereMesh);
+        loadingOverlay.style.display='none';
+        overlay.style.display='flex';
+        fetch('LICENSE').then(r=>r.text()).then(txt=>footerBar.textContent=txt).catch(()=>footerBar.textContent='© 2025. Do not distribute.');
+    },
+    function(xhr){ // onProgress
+        if(xhr.lengthComputable){
+            const percent = Math.round((xhr.loaded / xhr.total) * 100);
+            loadingOverlay.textContent = `Loading image... (${percent}%)`;
+            console.log(`Image load: ${percent}%`);
+        } else {
+            loadingOverlay.textContent = `Loading image...`;
+        }
+    },
+    function(err){ // onError
+        console.error('Error loading image', err);
+        loadingOverlay.textContent='No images were found on server.';
+        setTimeout(()=>loadingOverlay.style.display='none',3000);
+    }
+);
 
-    // Load LICENSE footer
-    fetch('LICENSE').then(r=>r.text()).then(txt=>footerBar.textContent=txt).catch(e=>footerBar.textContent='© 2025. Do not distribute.');
-
-}, undefined, err=>{
-    console.error('Error loading image', err);
-    loadingOverlay.textContent='No images were found on server.';
-    setTimeout(()=>loadingOverlay.style.display='none',3000);
-});
-
-// === Animation ===
-function animate(){ requestAnimationFrame(animate); renderer.render(scene, camera); }
+// Animation loop
+function animate(){ requestAnimationFrame(animate); renderer.render(scene,camera); }
 animate();
 
 function onWindowResize(){ camera.aspect = window.innerWidth/window.innerHeight; camera.updateProjectionMatrix(); renderer.setSize(window.innerWidth, window.innerHeight); }
 window.addEventListener('resize', onWindowResize);
 
-// === Overlay dismiss ===
 overlay.onclick = ()=>overlay.style.display='none';
 
-// === Disable right-click ===
-document.addEventListener('contextmenu', function(e) { e.preventDefault(); });
+// Disable right-click
+document.addEventListener('contextmenu', e=>e.preventDefault());
 </script>
-
 </body>
 </html>
