--- a/index.html
+++ b/index.html
@@ -4,23 +4,27 @@
 <meta charset="UTF-8">
 <title>360 Viewer</title>
 <link href="https://fonts.googleapis.com/css2?family=Saira:wght@300;400;500&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photo-sphere-viewer@4/dist/photo-sphere-viewer.css">
 <style>
-body { margin:0; overflow:hidden; font-family: 'Saira', sans-serif; background:#000; user-select: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; }
+body { margin:0; overflow:hidden; font-family:'Saira', sans-serif; background:#000; user-select:none; -webkit-user-select:none; -moz-user-select:none; -ms-user-select:none; }
+#viewer { width:100vw; height:100vh; }
 #instructionOverlay {
-    position: fixed; top:0; left:0; width:100vw; height:100vh; background: rgba(0,0,0,0.65);
-    color:#ccc; display:flex; justify-content:center; align-items:center; text-align:center;
-    font-size:16px; padding:20px; cursor:pointer; z-index:10; display:flex; user-select: none;
+    position:fixed; top:0; left:0; width:100vw; height:100vh;
+    background: rgba(0,0,0,0.65); color:#ccc; display:flex;
+    justify-content:center; align-items:center; text-align:center;
+    font-size:16px; padding:20px; cursor:pointer; z-index:10;
 }
 #footerBar {
     position: fixed; bottom:0; left:0; width:100%; height:18px;
-    backdrop-filter: blur(8px); background: rgba(40,40,40,0.45); color:#ccc;
-    font-size:12px; display:flex; align-items:center; justify-content:center; pointer-events:none; user-select:none;
+    backdrop-filter: blur(8px); background: rgba(40,40,40,0.45);
+    color:#ccc; font-size:12px; display:flex; align-items:center;
+    justify-content:center; pointer-events:none; user-select:none;
 }
-model-viewer { width:100vw; height:100vh; }
 </style>
 </head>
 <body>
 
+<div id="viewer"></div>
 <div id="instructionOverlay">
     <div>
         <p>Controls:<br>- Drag with mouse/finger to rotate.<br>- Scroll/pinch to zoom.<br><br><b>Click to dismiss.</b></p>
@@ -28,30 +32,27 @@ model-viewer { width:100vw; height:100vh; }
 </div>
 <div id="footerBar">Loading...</div>
 
-<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-
-<model-viewer id="viewer"
-    src="HalfMoonBay360_sphere.glb"
-    camera-controls
-    auto-rotate
-    exposure="1"
-    environment-image="neutral"
-    ar
-    disable-zoom
-    onload="modelLoaded()">
-</model-viewer>
-
+<script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/photo-sphere-viewer@4/dist/photo-sphere-viewer.js"></script>
 <script>
 const overlay = document.getElementById('instructionOverlay');
 const footerBar = document.getElementById('footerBar');
 
-function modelLoaded() {
-    // Load LICENSE if present
-    fetch('LICENSE').then(r=>r.text()).then(txt=>footerBar.textContent=txt).catch(()=>footerBar.textContent='© 2025. Do not distribute.');
-}
-
-// Hide overlay when clicked
 overlay.onclick = ()=>overlay.style.display='none';
+
+// Initialize Photo Sphere Viewer
+const viewer = new PhotoSphereViewer.Viewer({
+    container: document.getElementById('viewer'),
+    panorama: 'https://i.imgur.com/FYdmUI3.jpeg', // your 360 image
+    defaultYaw: 0,
+    navbar: ['zoom', 'fullscreen'],
+    mousewheel: true,
+    touchmoveTwoFingers: true,
+    moveSpeed: 1.0
+});
+
+// Load LICENSE if present
+fetch('LICENSE').then(r=>r.text()).then(txt=>footerBar.textContent=txt).catch(()=>footerBar.textContent='© 2025. Do not distribute.');
 
 // Disable right-click
 document.addEventListener('contextmenu', e=>e.preventDefault());
