--- a/index.html
+++ b/index.html
@@ -2,93 +2,29 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>360 Viewer</title>
-<link href="https://fonts.googleapis.com/css2?family=Saira:wght@300;400;500&display=swap" rel="stylesheet">
+<title>360 Test Viewer</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photo-sphere-viewer@4/dist/photo-sphere-viewer.css">
 <style>
-body {
-    margin:0;
-    overflow:hidden;
-    font-family:'Saira', sans-serif;
-    background:#000;
-    user-select:none;
-    -webkit-user-select:none;
-    -moz-user-select:none;
-    -ms-user-select:none;
-}
+body { margin:0; overflow:hidden; }
 #viewer { width:100vw; height:100vh; }
-#instructionOverlay {
-    position:fixed; top:0; left:0; width:100vw; height:100vh;
-    background: rgba(0,0,0,0.65);
-    color:#ccc;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    text-align:center;
-    font-size:16px;
-    padding:20px;
-    cursor:pointer;
-    z-index:10;
-}
-#footerBar {
-    position: fixed;
-    bottom:0; left:0; width:100%;
-    height:18px;
-    backdrop-filter: blur(8px);
-    background: rgba(40,40,40,0.45);
-    color:#ccc;
-    font-size:12px;
-    display:flex; align-items:center; justify-content:center;
-    pointer-events:none; user-select:none;
-}
 </style>
 </head>
 <body>
 
 <div id="viewer"></div>
 
-<div id="instructionOverlay">
-    <div>
-        <p>Controls:<br>- Drag with mouse/finger to rotate.<br>- Scroll/pinch to zoom.<br><br><b>Click to dismiss.</b></p>
-    </div>
-</div>
-
-<div id="footerBar">Loading...</div>
-
-<!-- Immediately load LICENSE first -->
-<script>
-const footerBar = document.getElementById('footerBar');
-fetch('LICENSE')
-    .then(r => {
-        if (!r.ok) throw new Error('Not found');
-        return r.text();
-    })
-    .then(txt => footerBar.textContent = txt)
-    .catch(() => footerBar.textContent = '© 2025. Do not distribute.');
-</script>
-
-<!-- Three.js & Photo Sphere Viewer -->
 <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/photo-sphere-viewer@4/dist/photo-sphere-viewer.js"></script>
-
 <script>
-// Instructions overlay
-const overlay = document.getElementById('instructionOverlay');
-overlay.onclick = ()=>overlay.style.display='none';
-
-// Initialize Photo Sphere Viewer
+// Initialize Photo Sphere Viewer with official panorama
 const viewer = new PhotoSphereViewer.Viewer({
     container: document.getElementById('viewer'),
-    panorama: 'halfmoonbay4k360.jpg', // local 2:1 equirectangular image
+    panorama: 'https://photo-sphere-viewer.js.org/assets/sphere.jpg', // hosted online
     defaultYaw: 0,
     navbar: ['zoom', 'fullscreen'],
     mousewheel: true,
-    touchmoveTwoFingers: true,
-    moveSpeed: 1.0
+    touchmoveTwoFingers: true
 });
-
-// Disable right-click
-document.addEventListener('contextmenu', e => e.preventDefault());
 </script>
 
 </body>
