--- a/index.html
+++ b/index.html
@@ -2,25 +2,41 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>360 Viewer</title>
-<link rel="stylesheet" href="photo-sphere-viewer.min.css">
+<title>360 Viewer v5</title>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photo-sphere-viewer@5.14.0/dist/photo-sphere-viewer.min.css">
 <style>
-html, body { margin:0; padding:0; width:100%; height:100%; background:#000; overflow:hidden; }
-#viewer { width:100%; height:100%; }
+  html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    overflow: hidden;
+    user-select: none; /* disable text selection */
+  }
+  #viewer { 
+    width: 100vw; 
+    height: 100vh; 
+  }
 </style>
 </head>
 <body>
+
 <div id="viewer"></div>
 
-<script src="photo-sphere-viewer.min.js"></script>
-<script>
-new PhotoSphereViewer({
-  container: document.getElementById('viewer'),
-  panorama: 'halfmoonbay4k360.jpg',
-  navbar: ['zoom','fullscreen'],
-  defaultFov: 70,
-  mousewheel: true
-});
+<script type="module">
+  import { Viewer } from 'https://cdn.jsdelivr.net/npm/photo-sphere-viewer@5.14.0/dist/photo-sphere-viewer.min.js';
+
+  // Initialize the viewer
+  const viewer = new Viewer({
+    container: document.querySelector('#viewer'),
+    panorama: 'halfmoonbay4k360.jpg', // image in root directory
+    defaultYaw: 0,
+    navbar: ['zoom','fullscreen'],
+    mousewheel: true,
+    touchmoveTwoFingers: false, // one-finger drag rotates
+  });
 </script>
+
 </body>
 </html>
