--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>360° Panorama - Half Moon Bay</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.6.0/build/pannellum.css"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"/>
   <style>
     body {
       margin: 0;
@@ -19,14 +19,16 @@
 
   <div id="panorama"></div>
 
-  <script src="https://cdn.jsdelivr.net/npm/pannellum@2.6.0/build/pannellum.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
   <script>
     pannellum.viewer('panorama', {
       "type": "equirectangular",
       "panorama": "halfmoonbay4k360.jpg",
       "autoLoad": true,
       "compass": false,
-      "showZoomCtrl": true
+      "showZoomCtrl": true,
+      "showFullscreenCtrl": true,
+      "hfov": 100
     });
   </script>
 
