--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <script>
     pannellum.viewer('panorama', {
       "type": "equirectangular",
-      "panorama": "halfmoonbay4k360.jpg",
+      "panorama": "https://i.imgur.com/FYdmUI3.jpeg",
       "autoLoad": true,
       "compass": false,
       "showZoomCtrl": true,
